Flailing about to get a shell

--- a/ext/kernel.config
+++ b/ext/kernel.config
@@ -11,3 +11,9 @@ CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_ETHERNET=n
 CONFIG_USB_NET_DRIVERS=n
+CONFIG_SMP=n
+CONFIG_SQUASHFS=y
+CONFIG_SQUASHFS_FILE_DIRECT=y
+CONFIG_SQUASHFS_ZSTD=y
+CONFIG_EROFS_FS=y
+CONFIG_EROFS_FS_ZIP_ZSTD=y
