--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -1,7 +1,7 @@
 BR2_x86_pentiumpro=y
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
-BR2_SYSTEM_DHCP="eth0"
+BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW=n
 BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
