--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-libv86.mjs filter=lfs diff=lfs merge=lfs -text
-v86.wasm filter=lfs diff=lfs merge=lfs -text
-vgabios.bin filter=lfs diff=lfs merge=lfs -text
-seabios.bin filter=lfs diff=lfs merge=lfs -text
+public/bios/seabios.bin filter=lfs diff=lfs merge=lfs -text
