Working to get an eZ80 compiler built
Haven't gotten to boot this yet, but it builds. Switched away from the
initrd-only approach because it requires more than 128MB of RAM to keep
the entire filesystem in RAM.

--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -1,8 +1,9 @@
-BR2_x86_pentiumpro=y
+BR2_x86_pentium2=y
+BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_X86_I686_GLIBC_STABLE=y
+
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
-BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW=n
-BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/qemu/x86/linux.config"
@@ -10,6 +11,8 @@ BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/kern
 BR2_LINUX_KERNEL_ZSTD=y
 BR2_PACKAGE_UTIL_LINUX=y
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-BR2_TARGET_ROOTFS_CPIO_ZSTD=y
-BR2_TARGET_ROOTFS_INITRAMFS=y
+BR2_TARGET_ROOTFS_SQUASHFS=y
+BF2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
 # BR2_TARGET_ROOTFS_TAR is not set
+
+BR2_PACKAGE_EZ80_LLVM=y
