--- a/ext/kernel.config
+++ b/ext/kernel.config
@@ -1,5 +1,11 @@
 CONFIG_CPU_MITIGATIONS=n
 CONFIG_SUSPEND=n
+CONFIG_SOUND=n
+CONFIG_HWMON=n
+CONFIG_HID_SUPPORT=n
+CONFIG_USB_SUPPORT=n
+CONFIG_VIRTIO_RTC=y
+CONFIG_VIRTIO_RTC_CLASS=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_NET_9P_DEBUG=y
