--- a/ext/Config.in
+++ b/ext/Config.in
@@ -1,1 +1,2 @@
-#source "$BR2_EXTERNAL_CSDK_APPLIANCE_PATH/package/simple_stream_server/Config.in"
+source "$BR2_EXTERNAL_CSDK_APPLIANCE_PATH/package/ce-csdk/Config.in"
+source "$BR2_EXTERNAL_CSDK_APPLIANCE_PATH/package/ez80-llvm/Config.in"
