--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -1,4 +1,5 @@
 BR2_x86_pentium2=y
+# Bootlin toolchain only needs to be downloaded, saving a lot of build time
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_X86_I686_GLIBC_STABLE=y
 
@@ -10,9 +11,10 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/qemu/x86/linux.config"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/kernel.config"
 BR2_LINUX_KERNEL_ZSTD=y
 BR2_PACKAGE_UTIL_LINUX=y
-BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BF2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
 # BR2_TARGET_ROOTFS_TAR is not set
 
 BR2_PACKAGE_EZ80_LLVM=y
+BR2_PACKAGE_CE_CSDK=y
+BR2_PACKAGE_FASMG=y
