--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -2,6 +2,16 @@ BR2_x86_pentium2=y
 # Bootlin toolchain only needs to be downloaded, saving a lot of build time
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_X86_I686_GLIBC_STABLE=y
+BR2_REPRODUCIBLE=y
+BR2_TARGET_GENERIC_HOSTNAME="csdk-appliance"
+BR2_TARGET_GENERIC_ISSUE=""
+# Be y2k38-ready
+BR2_TIME_BITS_64=y
+# No reason to harden compiled code, we run in a browser and are disposable
+BR2_PIC_PIE=n
+BR2_SSP_NONE=y
+BR2_RELRO_NONE=y
+BR2_FORTIFY_SOURCE_NONE=y
 
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
