Successfully build the CEdev examples

--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -25,6 +25,7 @@ BR2_TARGET_ROOTFS_SQUASHFS=y
 BF2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
 # BR2_TARGET_ROOTFS_TAR is not set
 
+BR2_PACKAGE_MAKE=y
 BR2_PACKAGE_EZ80_LLVM=y
 BR2_PACKAGE_CE_CSDK=y
 BR2_PACKAGE_FASMG=y
