--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -5,6 +5,7 @@ BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_X86_I686_GLIBC_STABLE=y
 BR2_REPRODUCIBLE=y
 BR2_TARGET_GENERIC_HOSTNAME="csdk-appliance"
 BR2_TARGET_GENERIC_ISSUE=""
+BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/rootfs-overlay"
 
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
@@ -15,6 +16,7 @@ BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/kern
 BR2_LINUX_KERNEL_ZSTD=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BF2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
+BR2_TARGET_ROOTFS_TAR=n
 
 # Be y2k38-ready
 BR2_TIME_BITS_64=y
