wip: installable sdkserver

--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -29,6 +29,7 @@ BR2_FORTIFY_SOURCE_NONE=y
 BR2_PACKAGE_MAKE=y
 BR2_PACKAGE_UTIL_LINUX=y
 BR2_PACKAGE_CE_CSDK=y
-BR2_PACKAGE_CE_CSDK_SERVER=y
 BR2_PACKAGE_EZ80_LLVM=y
 BR2_PACKAGE_FASMG=y
+BR2_PACKAGE_CSDK_SERVER=y
+BR2_PACKAGE_CSDK_SERVER_OVERRIDE_SRCDIR="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/../sdkserver"
