--- a/ext/package/csdk-server/Config.in
+++ b/ext/package/csdk-server/Config.in
@@ -1,12 +1,4 @@
-config BR2_PACKAGE_CE_CSDK_SERVER
-    bool "CE toolchain compiler server"
+config BR2_PACKAGE_CSDK_SERVER
+    bool "CE compiler server"
     select BR2_PACKAGE_CE_CSDK
     select BR2_PACKAGE_PYTHON3
-    select BR2_PACKAGE_PYTHON3_SSL
-    select BR2_PACKAGE_PYTHON_FASTAPI
-    select BR2_PACKAGE_PYTHON_MULTIPART
-    select BR2_PACKAGE_PYTHON_UVICORN
-    help
-      Install the TI-CE C/C++ toolchain compiler server.
-
-      https://gitlab.com/cemetech/csdk
