--- a/ext/kernel.config
+++ b/ext/kernel.config
@@ -1,7 +1,27 @@
+CONFIG_NO_HZ_IDLE=y
+CONFIG_CGROUPS=n
+CONFIG_UTS_NS=n
+CONFIG_TIME_NS=n
+CONFIG_IPC_NS=n
+CONFIG_PID_NS=n
+CONFIG_NET_NS=n
+CONFIG_X86_EXTENDED_PLATFORM=n
+CONFIG_MPENTIUMII=y
+CONFIG_PERF_EVENTS_INTEL_UNCORE=n
+CONFIG_PERF_EVENTS_INTEL_RAPL=n
+CONFIG_PERF_EVENTS_INTEL_CSTATE=n
+CONFIG_PERF_EVENTS_AMD_UNCORE=n
+CONFIG_X86_MCE=n
+CONFIG_X86_IOPL_IOPERM=n
+CONFIG_RELOCATABLE=n
+CONFIG_STACKPROTECTOR=n
+CONFIG_BLOCK_LEGACY_AUTOLOAD=n
+CONFIG_MODULES=n
 CONFIG_CPU_MITIGATIONS=n
 CONFIG_SUSPEND=n
 CONFIG_SOUND=n
 CONFIG_HWMON=n
+CONFIG_MQ_IOSCHED_DEADLINE=n
 CONFIG_HID_SUPPORT=n
 CONFIG_USB_SUPPORT=n
 CONFIG_VIRTIO_RTC=y
@@ -23,3 +43,4 @@ CONFIG_SQUASHFS_FILE_DIRECT=y
 CONFIG_SQUASHFS_ZSTD=y
 CONFIG_EROFS_FS=y
 CONFIG_EROFS_FS_ZIP_ZSTD=y
+CONFIG_INIT_STACK_NONE=y
