Use an image for builds that has tools we need

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
-variables:
-  GIT_SUBMODULE_STRATEGY: none
+default:
+  variables:
+    GIT_SUBMODULE_STRATEGY: none
+  image: buildpack-deps
 
 buildroot:
   stage: build
