--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,8 +12,7 @@ jobs:
         id: cache-buildroot-dl
         with:
           key: buildroot-dl
-          path:
-            - buildroot/dl
+          path: buildroot/dl
       - run: |
           ./setup.sh
           make -C build
