Disable more kernel options, saving more than 1MB of kernel image size

--- a/ext/kernel.config
+++ b/ext/kernel.config
@@ -21,26 +21,39 @@ CONFIG_CPU_MITIGATIONS=n
 CONFIG_SUSPEND=n
 CONFIG_SOUND=n
 CONFIG_HWMON=n
+CONFIG_ACPI=n
+CONFIG_SECCOMP=n
 CONFIG_MQ_IOSCHED_DEADLINE=n
 CONFIG_HID_SUPPORT=n
 CONFIG_USB_SUPPORT=n
+CONFIG_PACKET=n
+CONFIG_INET_DIAG=n
+CONFIG_INET=n
+CONFIG_IPV6=n
+CONFIG_ETHTOOL_NETLINK=n
+CONFIG_NETDEVICES=n
+CONFIG_POWER_SUPPLY=n
+CONFIG_THERMAL=n
+CONFIG_DRM=n
+CONFIG_VHOST_MENU=n
+CONFIG_SURFACE_PLATFORMS=n
+CONFIG_IOMMU_SUPPORT=n
+CONFIG_RTC_CLASS=y
 CONFIG_VIRTIO_RTC=y
 CONFIG_VIRTIO_RTC_CLASS=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
-CONFIG_NET_9P_DEBUG=y
+CONFIG_NET_9P_DEBUG=n
 CONFIG_9P_FS=y
 CONFIG_9P_FSCACHE=y
 CONFIG_9P_FS_POSIX_ACL=y
-CONFIG_ISO9660_FS=y
-CONFIG_JOLIET=y
-CONFIG_ZISOFS=y
+CONFIG_EXT4_FS=n
+CONFIG_ISO9660_FS=n
 CONFIG_ETHERNET=n
 CONFIG_USB_NET_DRIVERS=n
 CONFIG_SMP=n
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_DIRECT=y
 CONFIG_SQUASHFS_ZSTD=y
-CONFIG_EROFS_FS=y
-CONFIG_EROFS_FS_ZIP_ZSTD=y
+CONFIG_EROFS_FS=n
 CONFIG_INIT_STACK_NONE=y
