Use relative paths for web artifacts build
Without setting build.base for vite then Github Pages deployment
yields a broken site since it assumes it's deployed at
the root of whatever origin it's on.
Use relative paths instead, at the cost of breaking any browser that doesn't support `import.meta`.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Install npm packages
         run: npm ci
       - name: Build web
-        run: npm run build
+        run: npm run build -- --base=./
       - name: Upload web artifacts
         uses: actions/upload-artifact@v4
         with:
