Add vite config to build a self-contained html file
An 80MB HTML file might be useful to some people

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@xterm/xterm": "^5.5.0",
     "v86": "^0.5.262"
+  },
+  "optionalDependencies": {
+    "vite-plugin-singlefile": "^2.3.0"
   }
 }
