--- a/ext/configs/v86_defconfig
+++ b/ext/configs/v86_defconfig
@@ -6,6 +6,7 @@ BR2_REPRODUCIBLE=y
 BR2_TARGET_GENERIC_HOSTNAME="csdk-appliance"
 BR2_TARGET_GENERIC_ISSUE=""
 BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/rootfs-overlay"
+BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_CSDK_APPLIANCE_PATH}/busybox.config"
 
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
